Lessons_Learned/gatekeeper/constraints/dep-security-context-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDepSecurityContext
metadata:
  name: deployment-security-context
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    namespaces: ["test"]
  parameters:
    ops: ["CREATE","UPDATE"]
    errMsg: "INVALID_SECURITY_CONTEXT"
