Lessons_Learned/gatekeeper/constraints/pod-security-context-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodSecurityContext
metadata:
  name: pod-security-context
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["test"]
  parameters:
    ops: ["CREATE","UPDATE"]
    errMsg: "INVALID_SECURITY_CONTEXT"
